# generator/input/RS-RI.openapi.yaml
@@ -50,7 +50,7 @@ components:
       required:
       - datetime
       - resourceId
-      - vehiculeType
+      - vehicleType
       properties:
         datetime:
           type: string
@@ -127,12 +127,12 @@ components:
           description: A valoriser avec le lieu de garage principal
           examples:
           - CHU Nantes
-        vehiculeType:
+        vehicleType:
           type: string
           title: Type de vecteur
           x-health-only: false
           x-cols: 6
-          example: example.json#/resource/0/vehiculeType
+          example: example.json#/resource/0/vehicleType
           description: "A valoriser avec le type de vecteur mobilis\xE9 : cf. nomenclature\
             \ associ\xE9e"
           enum:
